# Npfs

./: GPLv3-with-linking-exception  README.md
Interface/: BufferedIo.cpp  BufferedIo.h  Callback.h  FdSelectHandler.h  MemoryManager.cpp  MemoryManager.h
Util/: AsyncFifo.cpp  AsyncFifo.h  AsyncFifoBuffer.cpp  AsyncFifoBuffer.h  StringBufferStream.cpp  StringBufferStream.h
Util/TcpSockets/: CMakeLists.txt  TcpClientSocket.cpp  TcpClientSocket.h  TcpServerSocket.cpp  TcpServerSocket.h  TcpSocket.cpp  TcpSocket.h
pt/: pt.h
pt/example/: example-small.c
src/Network/: CMakeLists.txt
src/Network/Interface/: IpDataTypes.h
src/Network/NpfsServer/: CMakeLists.txt  LinuxNpfsTcpConnection.cpp  LinuxNpfsTcpConnection.h  LinuxNpfsTcpServer.cpp  LinuxNpfsTcpServer.h
src/Npfs/: .gitignore  ByteStreamConnection.cpp  ByteStreamConnection.h  CMakeLists.txt  Connection.cpp  Connection.h  Fid.cpp  Fid.h  MsgBufferSerDes.cpp  MsgBufferSerDes.h  MsgSerDes.cpp  MsgSerDes.h  NpQid.cpp  NpQid.h  NpStat.cpp  NpStat.h  NpStr.cpp  NpStr.h  NpStrBuffer.cpp  NpStrBuffer.h  NpUser.cpp  NpUser.h  NpfsConstants.cpp  NpfsConstants.h  NpfsNew.cpp  NpfsNew.h  README_german  Server.cpp  Server.h
src/Npfs/Fcalls/: FcAttach.cpp  FcAttach.h  FcAuth.cpp  FcAuth.h  FcClunk.cpp  FcClunk.h  FcCreate.cpp  FcCreate.h  FcFlush.cpp  FcFlush.h  FcOpen.cpp  FcOpen.h  FcRead.cpp  FcRead.h  FcRemove.cpp  FcRemove.h  FcStat.cpp  FcStat.h  FcVersion.cpp  FcVersion.h  FcWalk.cpp  FcWalk.h  FcWrite.cpp  FcWrite.h  FcWstat.cpp  FcWstat.h  Fcall.cpp  Fcall.h  FsFcall.cpp  FsFcall.h
src/Npfs/Messages/: Message.h  (+59 more)
(+75 files in other folders)
